--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,23 +3,23 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/nav_home">
+    app:startDestination="@+id/nav_movies">
 
     <fragment
-        android:id="@+id/nav_home"
+        android:id="@+id/nav_movies"
         android:name="com.examen.carlosgs.ui.movies.MoviesFragment"
         android:label="@string/menu_home"
         tools:layout="@layout/fragment_movies" />
 
     <fragment
-        android:id="@+id/nav_gallery"
+        android:id="@+id/nav_locations"
         android:name="com.examen.carlosgs.ui.locations.LocationsFragment"
         android:label="@string/menu_gps"
         tools:layout="@layout/fragment_locations" />
 
     <fragment
-        android:id="@+id/nav_slideshow"
-        android:name="com.examen.carlosgs.ui.slideshow.SlideshowFragment"
-        android:label="@string/menu_slideshow"
-        tools:layout="@layout/fragment_slideshow" />
+        android:id="@+id/nav_upload_files"
+        android:name="com.examen.carlosgs.ui.upload.UploadFilesFragment"
+        android:label="@string/menu_upload"
+        tools:layout="@layout/fragment_upload_files" />
 </navigation>
