Limpieza de strings

--- a/app/src/main/res/layout/fragment_locations.xml
+++ b/app/src/main/res/layout/fragment_locations.xml
@@ -49,7 +49,7 @@
         android:id="@+id/tvEmptyData"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="No se encontro nada"
+        android:text="@string/txt_empty_locations"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
