--- a/app/src/main/res/layout/fragment_upload_files.xml
+++ b/app/src/main/res/layout/fragment_upload_files.xml
@@ -36,8 +36,18 @@
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:src="@drawable/ic_baseline_add_24"
-        android:contentDescription="fab button" />
+        android:src="@drawable/ic_baseline_add_24" />
+
+    <TextView
+        android:visibility="gone"
+        android:id="@+id/tvEmptyData"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/txt_files_empty"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
